rework the header menu to not be so intrusive. fix the logo so that it resizes and repositions correctly while overlapping the title area by default some.  add subtle emphasis on the title.

--- a/style.css
+++ b/style.css
@@ -59,40 +59,62 @@ a:hover{
 }
 /**Navbar**/
 .header{
+    height: 50pt;
     background: #fff;
     font-family: Intro, Segoe UI, Open Sans, Arial, sans-serif;
     text-transform: uppercase;
 }
 .header table{
     border-spacing: 0px 0px;
-    font-size: 22px;
+    font-size: 24px;
     margin: 0px auto;
 }
-.home{
-    width: 100%;
-    height: auto;
-    min-width: 64px;
-    max-width: 70%;
-    margin-top: 15px;
+.logo{
+    width: 80%;
+    height:auto;
+    margin-top: -8px;
+    padding-top: 0px;
     border-radius: 50%;
-    padding: 2px;
     background: #000;
+    z-index: 2;
+}
+.logomenu{
+    text-align: center;
+    width: 14%; /* 100 / 7 = 14 */
+    background: #000;
+/*    cursor: pointer;*/
+}
+
+.menutable{
+    width: 100%;
 }
 .menu{
     text-align: center;
+    width: 14%; /* 100 / 7 = 14 */
+/*    cursor: pointer;*/
+}
+td.menu{
+    background: #000;
+    text-align: center;
+    width: 14%; /* 100 / 7 = 14 */
+    padding-top: 2%;
+    padding-bottom: 380px;
+}
+
+a.menu{
+    color: #d0245e;
     width: 10%;
-    padding-top: 10px;
-/*    cursor: pointer; */
 }
 
 .menu:hover{
     color: #fff;
-    background: #000;
 }
 
 
 /**First**/
 .about{
+    left: 64px;
+    padding: 25px;
     font-size: 23px;
     background: #2d2d2d;
     text-align: center;
@@ -110,6 +132,12 @@ a:hover{
     font-size: 100px;
     color: #d0245e; /*d91a5d; */
     margin-top: 20px;
+
+    text-shadow: 0px 0px 4px #282828,
+    -1px -1px 0 #282828,
+    1px -1px 0 #282828,
+    -1px 1px 0 #282828,
+    1px 1px 0 #282828;
 }
 .dash{
     position: relative;
@@ -119,6 +147,12 @@ a:hover{
     font-size: 100px;
     color: #888;
     margin-top: 20px;
+
+    text-shadow: 0px 0px 4px #111,
+    -1px -1px 0 #111,
+    1px -1px 0 #111,
+    -1px 1px 0 #111,
+    1px 1px 0 #111;
 }
 .cad{
     position: relative;
@@ -126,6 +160,12 @@ a:hover{
     font-size: 100px;
     color: #fff;
     margin-top: 20px;
+
+    text-shadow: 0px 0px 4px #111;
+    -1px -1px 0 #111,
+    1px -1px 0 #111,
+    -1px 1px 0 #111,
+    1px 1px 0 #111;
 }
 .byline{
     position: relative;
@@ -133,6 +173,12 @@ a:hover{
     font-size: 32px;
     color: #fff;
     top: -16px;
+
+    text-shadow: 0px 0px 8px #111,
+    -1px -1px 0 #111,
+    1px -1px 0 #111,
+    -1px 1px 0 #111,
+    1px 1px 0 #111;
 }
 .pad{
     padding-top: 20px;
